--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,22 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: sans-serif;
+}
+.cell {
+  display: inline-block;
+  width: 100%;
+  color: blue;
+}
+#parent .cell {
+  width: 8.34%;
+  padding: 45px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.odd {
+  background-color: white;
+}
+
+.even {
+  background-color: black;
 }
